--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "any-db-postgres",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "The postgres adapter for any-db",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grncdr/node-any-db-postgres.git"
-  },
-  "bugs": {
-    "url": "https://github.com/grncdr/node-any-db-postgres/issues"
+    "url": "git+ssh://git@github.com:max-lincoln-iss/any-db-postgres.git"
   },
   "keywords": [
     "any-db",
